--- a/account/invoice/edit-invoice.html
+++ b/account/invoice/edit-invoice.html
@@ -1592,6 +1592,7 @@
       // let invFooterNotesContent = tinymce.get("invFooterNotes").getContent({ format: "text" });
       // document.getElementById("countFooterNotes").textContent = invFooterNotesContent.length + '/200';
 
+      let imgtxt = invObj[INV_SENDER_IMG_URL] == null || invObj[INV_SENDER_IMG_URL] == '' ?  'data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D' : 'https://golearn.com.my/proxy.php?csurl='+invObj[INV_SENDER_IMG_URL];
 
       if (invObj[INV_SENDER_IMG_URL] == null ||invObj[INV_SENDER_IMG_URL] == '' || invObj[INV_SENDER_IMG_URL] == "data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D"){
         document.getElementById("previewTutorImgUrl").style.display = 'none';
@@ -1605,8 +1606,32 @@
             // console.log('RESULT:', dataUrl)
           },
         );
+
+        // NOTE: NEW
+        toDataURLNew(
+          imgtxt,
+          function(dataUrl) {
+            var imgTarget = document.getElementById("previewTutorImgUrl");
+            imgTarget.src = dataUrl;
+            // console.log('RESULT:', dataUrl)
+          }
+        )
+
       }
 
+      function toDataURLNew(url, callback) {
+        var xhr = new XMLHttpRequest();
+        xhr.onload = function() {
+          var reader = new FileReader();
+          reader.onloadend = function() {
+            callback(reader.result);
+          }
+          reader.readAsDataURL(xhr.response);
+        };
+        xhr.open('GET', url);
+        xhr.responseType = 'blob';
+        xhr.send();
+      }
       document.getElementById("previewInvTitle").textContent =invObj[INV_TITLE];
       document.getElementById("previewInvBizName").textContent = invObj[INV_SENDER_NAME];
       document.getElementById("previewInvBizDetails").innerHTML = invObj[INV_SENDER_DETAILS];
