--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1516,6 +1516,7 @@
 
         function toDataURLNew(url, callback) {
           var xhr = new XMLHttpRequest();
+          img.crossOrigin = 'Anonymous';
           xhr.onload = function() {
             var reader = new FileReader();
             reader.onloadend = function() {
@@ -1524,6 +1525,8 @@
             reader.readAsDataURL(xhr.response);
           };
           xhr.open('GET', url);
+          xhr.setRequestHeader('Access-Control-Allow-Headers', '*');
+          xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
           xhr.responseType = 'blob';
           xhr.send();
         }
