--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1524,8 +1524,8 @@
             reader.readAsDataURL(xhr.response);
           };
           xhr.open('GET', url);
-          xhr.setRequestHeader('Access-Control-Allow-Headers', '*');
-          xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
+          // xhr.setRequestHeader('Access-Control-Allow-Headers', '*');
+          // xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
           xhr.responseType = 'blob';
           xhr.send();
         }
