--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1508,7 +1508,7 @@
             function(dataUrl) {
               var imgTarget = document.getElementById("previewTutorImgUrl");
               imgTarget.src = dataUrl;
-              // console.log('RESULT:', dataUrl)
+              console.log('RESULT:', dataUrl)
             }
           )
 
