Test proxy server

--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1522,6 +1522,8 @@
             reader.onloadend = function() {
               callback(reader.result);
             }
+            console.log("xhr.response")
+            console.log(xhr.response)
             reader.readAsDataURL(xhr.response);
           };
           xhr.open('GET', url);
