--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1527,7 +1527,9 @@
             reader.readAsDataURL(xhr.response);
           };
           xhr.open('GET', url);
-          xhr.responseType = 'blob';
+          // xhr.responseType = 'blob';
+          xhr.responseType = 'text';
+
           xhr.send();
         }
 
