Test proxy server

--- a/account/invoice/create-invoice.html
+++ b/account/invoice/create-invoice.html
@@ -1527,8 +1527,8 @@
             reader.readAsDataURL(xhr.response);
           };
           xhr.open('GET', url);
-          // xhr.responseType = 'blob';
-          xhr.responseType = 'text';
+          xhr.responseType = 'blob';
+          // xhr.responseType = 'text';
 
           xhr.send();
         }
