--- a/account/invoice/edit-invoice.html
+++ b/account/invoice/edit-invoice.html
@@ -1613,13 +1613,17 @@
           function(dataUrl) {
             var imgTarget = document.getElementById("previewTutorImgUrl");
             imgTarget.src = dataUrl;
-            // console.log('RESULT:', dataUrl)
+          },
+          function(e) {
+            var imgTarget = document.getElementById("previewTutorImgUrl");
+            imgTarget.src = 'data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D';
+            console.log(e)
           }
         )
 
       }
 
-      function toDataURLNew(url, callback) {
+      function toDataURLNew(url, callback, error) {
         var xhr = new XMLHttpRequest();
         xhr.onload = function() {
           var reader = new FileReader();
@@ -1628,10 +1632,14 @@
           }
           reader.readAsDataURL(xhr.response);
         };
+        xhr.onerror= function(){
+          error('Image loading error')
+        };
         xhr.open('GET', url);
         xhr.responseType = 'blob';
         xhr.send();
       }
+
       document.getElementById("previewInvTitle").textContent =invObj[INV_TITLE];
       document.getElementById("previewInvBizName").textContent = invObj[INV_SENDER_NAME];
       document.getElementById("previewInvBizDetails").innerHTML = invObj[INV_SENDER_DETAILS];
