--- a/account/payroll/run-payroll.html
+++ b/account/payroll/run-payroll.html
@@ -7166,11 +7166,15 @@
             function(dataUrl) {
               var imgTarget = document.getElementById("previewTutorImgUrl");
               imgTarget.src = dataUrl;
-              // console.log('RESULT:', dataUrl)
+            },
+            function(e) {
+              var imgTarget = document.getElementById("previewTutorImgUrl");
+              imgTarget.src = 'data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D';
+              console.log(e)
             }
           )
         }
-        function toDataURLNew(url, callback) {
+        function toDataURLNew(url, callback, error) {
           var xhr = new XMLHttpRequest();
           xhr.onload = function() {
             var reader = new FileReader();
@@ -7178,6 +7182,9 @@
               callback(reader.result);
             }
             reader.readAsDataURL(xhr.response);
+          };
+          xhr.onerror= function(){
+            error('Image loading error')
           };
           xhr.open('GET', url);
           xhr.responseType = 'blob';
