--- a/account/invoice/view.html
+++ b/account/invoice/view.html
@@ -757,7 +757,7 @@
                 <div class="row">
                   <div class="col-md-4 text-center">
                     <div style="height: 140px;width: 140px; display: inline-block; position: relative; overflow: hidden; border-radius: 50%;">
-                      <img id="viewTutorImgUrl" style="height: 100%;width: 100%; object-fit: cover;" src="../../assets/img/empty-photo.png"/>
+                      <img id="viewTutorImgUrl" style="height: 100%;width: 100%; object-fit: cover;" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D"/>
                     </div>
 
                   </div>
@@ -944,7 +944,7 @@
                       <div class="form-group">
                         <!-- <canvas id="myCanvas" style="height: 150px;width: 225px; object-fit: cover;" ></canvas> -->
                         <div style="height: 115px;width: auto; display: inline-block; position: relative; overflow: hidden; cursor: pointer;">
-                          <img id="previewTutorImgUrl" style="height: 100%; width: auto; " src="../../assets/img/empty-photo.png" crossorigin="anonymous" alt = ""/>
+                          <img id="previewTutorImgUrl" style="height: 100%; width: auto; " src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D" crossorigin="anonymous" alt = ""/>
                           <!-- <canvas id="myCanvas" ></canvas> -->
                         </div>
                       </div>
