--- a/account/invoice/checker.html
+++ b/account/invoice/checker.html
@@ -11,7 +11,7 @@
   <meta property=og:title content="GoLearn School">
   <meta property=og:site_name content="GoLearn School">
   <meta property=og:type content=website>
-  <meta property=og:url content=https://org.golearn.com.my/school/invoice/ >
+  <meta property=og:url content=https://org.golearn.com.my/account/invoice/checker.html >
   <meta property=og:image content=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
   <meta property=og:description content="GoLearn School&trade; is Malaysia #1 teaching platform to run your tuition business and manage your lessons. Start now for Free!">
   <link rel=apple-touch-icon sizes=180x180 href=https://org.golearn.com.my/assets/img/icon-apple-touch-180x180.png>
@@ -1003,7 +1003,7 @@
         cell1.innerHTML = gurNameArr[index];
         cell2.innerHTML = rid;
         let invUrl_a = document.createElement('a');
-        invUrl_a.href = 'https://org.golearn.com.my/school/invoice/create-invoice.html';
+        invUrl_a.href = 'https://org.golearn.com.my/account/invoice/create-invoice.html'+ '&url=' + orgUrl + "&ent=" + orgEnt;
         invUrl_a.textContent = 'Create New';
         invUrl_a.setAttribute('class', 'btn btn-primary btn-sm btn-round');
         invUrl_a.setAttribute('target', '_blank');
@@ -1037,7 +1037,7 @@
         cell2.innerHTML = rid;
         let invUrl_a = document.createElement('a');
         let encodeId = encode64(rid);
-        invUrl_a.href = 'https://org.golearn.com.my/school/invoice/create-invoice.html?cid=' +encodeId ;
+        invUrl_a.href = 'https://org.golearn.com.my/account/invoice/create-invoice.html?cid=' +encodeId + '&url=' + orgUrl + "&ent=" + orgEnt;
         invUrl_a.textContent = 'Create New';
         invUrl_a.setAttribute('class', 'btn btn-primary btn-sm btn-round');
         invUrl_a.setAttribute('target', '_blank');
